src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
body {
	margin: 0;
	padding: 0;
//	position: fixed;
//	max-width: 800px;
	width: 100%;
//	background: url('img/wild_oliva.png') !important;
//	background-color: black;
//	background: black;
	overflow-y: visible;
}
	
.ui-page.ui-body-c  {
//	background: url('img/wild_oliva.png') !important;
//	background: black;
//	background-color: black;
	padding: 0;
	margin: 0;
} 

#s_page {
	position: fixed;
}

#f_page {
//	overflow: auto;
	width: 100%;
}
	
.header {
	width: 100%;
	height: 44px;
//	position: fixed;
	top: 0px;
	margin-top: 0px;
	padding-top: 0px;
}

.headerText {
	font-size: 1.0em;
	font-family: tahoma, arial;
	color: white;
	text-align: center;
	border:0;
	text-shadow: 0px -1px 1px #ccc, 0px 1px 1px #000;
	margin-top: 10px;
}
	


.header .ui-btn { margin: 0px; padding-left: 8px; padding-right: 8px; top: 4px; height: 34px; border-radius: 6px; }

.header .ui-btn-inner { border: 0px; margin-top: 5px;}
 


/* #header .ui-btn { margin: 0px; padding: 0px; top: 5px; width: 44px; height: 34px; border-radius: 6px; }
#header .ui-btn-inner { border: 0px; padding: 0px; margin-top: 6px; margin-left: 10px;}
#header .ui-btn-text { font-size: 1.2em; } */


#roundScore {
	border: 0px;
	font-size: 0.8em;
	font-family: arial, verdana;
	font-weight: bold;
	text-align: left;
	margin-top: 1.5em;
	padding-left: 2px;
	line-height: 1.1em; 
	color: #333;
	text-shadow: 0px 1px 1px #fcfcfc;
}
	
#holeScore {
	border: 0px;
	font-size: 0.8em;
	font-family: arial, verdana;
	font-weight: bold;
	text-align: right;
	margin-top: 1.5em;
	padding-right: 2px;
	line-height: 1.1em; 
	color: #333;
	text-shadow: 0px 1px 1px #fcfcfc;
}

#scoreWrappi
	{
	width: 100% !important;
	clear: both;
	border: 0px;
	padding: 0px;
	background-color: transparent;
	padding-top: 5px;
	height: 75px;
}
	
#scoreWrappi .ui-block-a { width: 30%}
#scoreWrappi .ui-block-b { width: 40%}
#scoreWrappi .ui-block-c { width: 30%}
	
#score {
	margin: auto;
	border: 0px;
	width: 80px;
	height: 60px;
	margin-left: auto;
	margin-right: auto;
	border-radius: 4px;
	border-color: gray;
	border-width: 0px;
	border-style: solid;
	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */

}

#scoreB {
	border:0;
	padding:0;
	margin: auto;
}

#il {
	width: 100%;
}
	
#ir {
	width: 100%;
}

#scoreDisplay {
	font-size: 3em !important;
	width: 100%;
	text-align: center;
	font-family: verdana, arial;
	float: left;
	margin-top: 2px;
	font-weight: bold;
//	color: #eee;
	color: #000;
	text-shadow: -1px -1px 1px rgba(175,175,175,0.85), 1px -1px 1px rgba(165,165,165,0.85), -1px 1px 1px rgba(255,255,255,0.85), 1px 1px 1px rgba(255,255,255,0.85);
//	position: relative;

}

.footer {
	width: 100%;
	height: 44px;
	position: fixed;
	padding: 0px;
	padding-bottom: 0px !important;
	bottom: -1px !important;
//	bottom: 0px;
	margin: 0px;
	}
	
.footer .ui-btn { background: transparent; height: 44px;  top: 0px !important; bottom: 0px !important; padding: 0px; margin: 0px; border-color: transparent; box-shadow: none; padding: 0px}

.footer .ui-btn-inner { margin-top: 6px; border: 0px }

.footer .ui-icon {
	background-color: rgba(0,0,0,0.0);
	box-shadow: none;
}

.holenav {
	color: #ccc;
}

#sliderWrappi {
	top: 10px;
	margin: 0px;
	height: 80px;

	}

#sliderWrappi .ui-block-a { width: 5%}
#sliderWrappi .ui-block-b { width: 90%}
#sliderWrappi .ui-block-c { width: 5%}
	
#sliderW {
	margin: auto;
	height: 18px;
	border: 1px;
	border-style: outset;
	border-color: #222;
	border-radius: 10px;
	
	background: rgb(30,30,30); /* Old browsers */
	background: -moz-linear-gradient(left,  rgba(30,30,30,1) 0%, rgba(86,86,86,1) 15%, rgba(206,206,206,1) 35%, rgba(239,239,239,1) 42%, rgba(239,239,239,1) 58%, rgba(206,206,206,1) 65%, rgba(86,86,86,1) 85%, rgba(30,30,30,1) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(30,30,30,1)), color-stop(15%,rgba(86,86,86,1)), color-stop(35%,rgba(206,206,206,1)), color-stop(42%,rgba(239,239,239,1)), color-stop(58%,rgba(239,239,239,1)), color-stop(65%,rgba(206,206,206,1)), color-stop(85%,rgba(86,86,86,1)), color-stop(100%,rgba(30,30,30,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(left,  rgba(30,30,30,1) 0%,rgba(86,86,86,1) 15%,rgba(206,206,206,1) 35%,rgba(239,239,239,1) 42%,rgba(239,239,239,1) 58%,rgba(206,206,206,1) 65%,rgba(86,86,86,1) 85%,rgba(30,30,30,1) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(left,  rgba(30,30,30,1) 0%,rgba(86,86,86,1) 15%,rgba(206,206,206,1) 35%,rgba(239,239,239,1) 42%,rgba(239,239,239,1) 58%,rgba(206,206,206,1) 65%,rgba(86,86,86,1) 85%,rgba(30,30,30,1) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(left,  rgba(30,30,30,1) 0%,rgba(86,86,86,1) 15%,rgba(206,206,206,1) 35%,rgba(239,239,239,1) 42%,rgba(239,239,239,1) 58%,rgba(206,206,206,1) 65%,rgba(86,86,86,1) 85%,rgba(30,30,30,1) 100%); /* IE10+ */
	background: linear-gradient(to right,  rgba(30,30,30,1) 0%,rgba(86,86,86,1) 15%,rgba(206,206,206,1) 35%,rgba(239,239,239,1) 42%,rgba(239,239,239,1) 58%,rgba(206,206,206,1) 65%,rgba(86,86,86,1) 85%,rgba(30,30,30,1) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e1e', endColorstr='#1e1e1e',GradientType=1 ); /* IE6-9 */

	margin-top: 16px;
	padding: 0px;
}
/* ... */

